--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
             <img src="./images/NASA_logo.svg.png" alt="Logo_Nasa">
             <h1>Space Dev.F</h1>
         </section>
-        <section class="header-space--menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </section>
     </header>
 
     <main>
@@ -39,5 +32,12 @@
     <section class="info-section" id="nasa-image">
         
     </section>
+
+    <footer class="footer-container">
+        <section class="imagen-y-equipo">
+          <img class="nasa-img" src="./images/NASA_logo.svg.png" alt="nasa">
+          <p class="creador">@2022 Carlos Ivan Garcia Fougerat</p>
+        </section>
+      </footer>
 </body>
 </html>
